# energy-trading-pypeline

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: releases.md
migrations/: 001_create_energy_market_tables.sql  002_create_market_alerts.sql
src/energy_trading_pypeline/: __init__.py  config.py
src/energy_trading_pypeline/domain/: alerts.py  energy_market_event.py  market_snapshot.py
src/energy_trading_pypeline/generator/: event_generator.py
src/energy_trading_pypeline/messaging/: consumer.py  producer.py  serialization.py  topic_admin.py
src/energy_trading_pypeline/persistence/: db.py  repositories.py  schema.py
src/energy_trading_pypeline/pipelines/: consume_raw_events.py  produce_synthetic_events.py
src/energy_trading_pypeline/tools/: check_database_connection.py
tests/unit/: test_alert_rules.py  test_energy_market_event.py  test_energy_market_event_serialization.py  test_event_generator.py  test_market_alert_repository.py  test_market_snapshot_repository.py  test_raw_energy_market_event_repository.py  test_snapshot_calculation.py
