[project]
name = "energy-trading-pypeline"
version = "0.1.0"
description = "Python data pipeline lab for synthetic energy trading market data."
readme = "README.md"
authors = [
    { name = "Nico Fiorito", email = "88680241+NFMdev@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.0",
    "confluent-kafka>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
energy-generate = "energy_pipeline.generator.synthetic_event_generator:main"
energy-ingest = "energy_pipeline.pipelines.ingest_market_events:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
