[project]
name = "energy-trading-pypeline"
version = "0.1.0"
description = "Python data pipeline lab for synthetic energy trading market data."
readme = "README.md"
authors = [
    { name = "Nico Fiorito", email = "88680241+NFMdev@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "psycopg[binary]>=3.3.4",
    "confluent-kafka>=2.14.0",
    "python-dotenv>=1.0",
]

[project.scripts]
energy-generate = "energy_trading_pypeline.generator.event_generator:main"
energy-check-db = "energy_trading_pypeline.tools.check_database_connection:main"
energy-produce = "energy_trading_pypeline.pipelines.produce_synthetic_events:main"
energy-consume = "energy_trading_pypeline.pipelines.consume_raw_events:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["confluent_kafka.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
